--- a/css/style.css
+++ b/css/style.css
@@ -287,8 +287,6 @@ page selected.*/
 }
 
 
-
-
 /*CONTACT US*/
 
 #form-section {
@@ -330,6 +328,7 @@ page selected.*/
 #contact-info {
     background: #BBB291;
     color:white;
+    text-decoration: none;
 }
 
 
